// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with 6 images 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "key": "1",
          "uri": "https://www.example.com/image1.png",
        },
        Object {
          "key": "2",
          "uri": "https://www.example.com/image2.png",
        },
        Object {
          "key": "3",
          "uri": "https://www.example.com/image3.png",
        },
        Object {
          "key": "4",
          "uri": "https://www.example.com/image4.png",
        },
        Object {
          "key": "5",
          "uri": "https://www.example.com/image5.png",
        },
        Object {
          "key": "6",
          "uri": "https://www.example.com/image6.png",
        },
      ]
    }
    dataSource={
      ListViewDataSource {
        "items": 2,
      }
    }
    enableEmptySections={true}
    itemHasChanged={[Function]}
    itemsPerRow={3}
    onEndReached={[Function]}
    onEndReachedThreshold={1334}
    refreshControl={null}
    renderFooter={[Function]}
    renderItem={[Function]}
    renderPlaceholder={null}
    renderRow={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={[Function]}
    sections={false}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-around",
          }
        }
      >
        <Image
          defaultSource={1}
          resizeMode="contain"
          source={
            Object {
              "uri": "https://www.example.com/image1.png",
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
                "height": 248,
                "margin": 1,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        />
        <Image
          defaultSource={1}
          resizeMode="contain"
          source={
            Object {
              "uri": "https://www.example.com/image2.png",
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
                "height": 248,
                "margin": 1,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        />
        <Image
          defaultSource={1}
          resizeMode="contain"
          source={
            Object {
              "uri": "https://www.example.com/image3.png",
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
                "height": 248,
                "margin": 1,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "space-around",
          }
        }
      >
        <Image
          defaultSource={1}
          resizeMode="contain"
          source={
            Object {
              "uri": "https://www.example.com/image4.png",
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
                "height": 248,
                "margin": 1,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        />
        <Image
          defaultSource={1}
          resizeMode="contain"
          source={
            Object {
              "uri": "https://www.example.com/image5.png",
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
                "height": 248,
                "margin": 1,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        />
        <Image
          defaultSource={1}
          resizeMode="contain"
          source={
            Object {
              "uri": "https://www.example.com/image6.png",
            }
          }
          style={
            Array [
              Object {
                "flex": 1,
                "height": 248,
                "margin": 1,
              },
              Object {
                "backgroundColor": "white",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders correctly without any images 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    data={Array []}
    dataSource={
      ListViewDataSource {
        "items": 0,
      }
    }
    enableEmptySections={true}
    itemHasChanged={[Function]}
    itemsPerRow={3}
    onEndReached={[Function]}
    onEndReachedThreshold={1334}
    refreshControl={null}
    renderFooter={[Function]}
    renderItem={[Function]}
    renderPlaceholder={null}
    renderRow={[Function]}
    renderScrollComponent={[Function]}
    renderSectionHeader={[Function]}
    sections={false}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View />
  </RCTScrollView>
</View>
`;
